Fix Ant build errors and ImageIcon NullPointerException, and add token reduction rules